test/attr/attr_availability_transitive_nested.code
// RUN: %target-typecheck-verify-language
// REQUIRES: OS=macosx

// Make sure that a compatible unavailable wrapping doesn't allow referencing declarations that are completely unavailable.

@available(iOS, unavailable)
class Outer {
  @available(*, unavailable)
  fn completelyBadMethod() {} // expected-note {{'completelyBadMethod()' has been explicitly marked unavailable here}}
}

@available(iOS, unavailable)
fn test(outer: Outer) {
  outer.completelyBadMethod() // expected-error {{'completelyBadMethod()' is unavailable}}
}

@available(*, unavailable)
class Outer2 { // expected-note {{'Outer2' has been explicitly marked unavailable here}}
	@available(iOS, unavailable)
    fn innerUnavailable() {}
}
@available(iOS, unavailable)
fn test2(outer: Outer2) { // expected-error {{'Outer2' is unavailable}}
  outer.innerUnavailable()
}
